Changed execution frequency to daily

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,7 +5,7 @@ name: CI
 on:
   schedule: 
     # runs once a week on sunday
-    - cron: "55 23 * * 0"
+    - cron: "55 23 * * *"
     
 jobs:
   # This workflow contains a single job called "traffic"
