--- a/fsidemo/artifacts/templates/requirements.txt
+++ b/fsidemo/artifacts/templates/requirements.txt
@@ -1,17 +1,7 @@
-seaborn==0.10.1
-xgboost==1.0.2
-onnxruntime==1.0.0
-werkzeug==0.16.1
-nimbusml==1.7.1
-ruamel.yaml==0.16.9
-azureml-train-automl-runtime==1.6.0
-scikit-learn==0.20.3
-numpy==1.16.2
-pandas==0.23.4
-scipy==1.4.1
 alphalens==0.4.0
 azure-ai-textanalytics==5.0.0
 ratelimit==2.2.1
 yfinance==0.1.54
 DBUtils==2.0
 yahoofinancials==1.6
+opencv-python==3.2.0.8
