--- a/retail/artifacts/templates/logic_app_video_trigger_def.json
+++ b/retail/artifacts/templates/logic_app_video_trigger_def.json
@@ -13,7 +13,7 @@
                                 }
                             },
                             "method": "post",
-                            "path": "/v3/dbs/@{encodeURIComponent('videoindexer')}/colls/@{encodeURIComponent('videoindexerinsights')}/docs"
+                            "path": "/v3/dbs/@{encodeURIComponent('video-indexer')}/colls/@{encodeURIComponent('videoindexerinsights')}/docs"
                         },
                         "runAfter": {
                             "Get_Video_Insights": [
