--- a/retail/modular_scripts/logic_app_template.json
+++ b/retail/modular_scripts/logic_app_template.json
@@ -20,13 +20,13 @@
            "description":""
         }
      },
-     "cosmos_database_name_retailinventorydb":{
-        "type":"String",
-        "metadata":{
-           "description":""
-        }
-     },
-     "cosmos_database_container_name_videoindexerinsights":{
+      "video_indexer_account_id": {
+         "type": "String",
+         "metadata": {
+         "description": "Video indexer account ID."
+         }
+      },
+     "connections_azureblob_name":{
         "type":"String",
         "metadata":{
            "description":""
@@ -51,16 +51,41 @@
          }
       }
    },
-   "variables":{},
+   "variables":{
+      "subscriptionid":"[subscription().subscriptionId]",
+      "logic_app_concatfunc": "[concat('concat(decodeUriComponent(''https%3A%2F%2Fapi.videoindexer.ai%2Ftrial%2FAccounts%2F',parameters('video_indexer_account_id'),'%2FVideos%2F''), triggerOutputs()[''queries''][''id''], decodeUriComponent(''%2FIndex''))')]",
+      "logic_app_storage_trigger_url": "[concat(resourceId('Microsoft.Logic/workflows/', parameters('workflows_logic_storage_trigger_name')), '/triggers/manual')]",
+      "logic_app_indexer_trigger_url": "[concat(resourceId('Microsoft.Logic/workflows/', parameters('workflows_logic_video_indexer_trigger_name')), '/triggers/manual')]"
+   },
    "resources":[
       {
-         "name": "[variables('workflows_logic_storage_trigger_name')]",
+         "name": "[parameters('connections_azureblob_name')]",
+         "type": "Microsoft.Web/connections",
+         "apiVersion": "2016-06-01",
+         "location": "[parameters('location')]",
+         "kind": "V1",
+         "dependsOn": [
+         "[resourceId('Microsoft.Storage/storageAccounts', parameters('storage_account_name'))]"
+         ],
+         "properties": {
+         "displayName": "azureblob",
+         "parameterValues": {
+            "accountName": "[parameters('storage_account_name')]",
+            "accessKey": "[listKeys(resourceId('Microsoft.Storage/storageAccounts',parameters('storage_account_name')),'2019-04-01').keys[0].value]"
+         },
+         "api": {
+            "id": "[concat(subscription().id,'/providers/Microsoft.Web/locations/', parameters('location'), '/managedApis/azureblob')]"
+         }
+         }
+      },
+      {
+         "name": "[parameters('workflows_logic_storage_trigger_name')]",
          "type": "Microsoft.Logic/workflows",
          "apiVersion": "2017-07-01",
-         "location": "[variables('location')]",
+         "location": "[parameters('location')]",
          "dependsOn": [
-         "[resourceId('Microsoft.Web/connections', variables('connections_azureblob_name'))]",
-         "[resourceId('Microsoft.Logic/workflows', variables('workflows_logic_video_indexer_trigger_name'))]"
+         "[resourceId('Microsoft.Web/connections', parameters('connections_azureblob_name'))]",
+         "[resourceId('Microsoft.Logic/workflows', parameters('workflows_logic_video_indexer_trigger_name'))]"
          ],
          "properties": {
          "state": "Enabled",
@@ -177,7 +202,7 @@
                      },
                      "host": {
                         "connection": {
-                           "name": "[concat('@parameters(''$connections'')','[''',variables('connections_azureblob_name'),'''][''connectionId'']')]"
+                           "name": "[concat('@parameters(''$connections'')','[''',parameters('connections_azureblob_name'),'''][''connectionId'']')]"
                         }
                      },
                      "method": "post",
@@ -205,7 +230,7 @@
                         "accountId": "[parameters('video_indexer_account_id')]",
                         "callbackUrl": "[listCallbackURL(variables('logic_app_indexer_trigger_url'), '2019-05-01').value]",
                         "language": "English",
-                        "location": "[variables('location')]",
+                        "location": "[parameters('location')]",
                         "name": "@{substring(substring(items('For_each')?['data']?['url'], indexof(items('For_each')?['data']?['url'], 'source-files')), 13)}",
                         "privacy": "Public",
                         "videoUrl": "@{body('Create_SAS_URI_by_path')?['WebUrl']}"
@@ -242,10 +267,10 @@
          "parameters": {
             "$connections": {
                "value": {
-               "[variables('connections_azureblob_name')]": {
-                  "connectionId": "[resourceId('Microsoft.Web/connections', variables('connections_azureblob_name'))]",
-                  "connectionName": "[variables('connections_azureblob_name')]",
-                  "id": "[concat('/subscriptions/',variables('subscriptionId'),'/providers/Microsoft.Web/locations/',variables('location'),'/managedApis/azureblob')]"
+               "[parameters('connections_azureblob_name')]": {
+                  "connectionId": "[resourceId('Microsoft.Web/connections', parameters('connections_azureblob_name'))]",
+                  "connectionName": "[parameters('connections_azureblob_name')]",
+                  "id": "[concat('/subscriptions/',variables('subscriptionId'),'/providers/Microsoft.Web/locations/',parameters('location'),'/managedApis/azureblob')]"
                }
                }
             }
@@ -253,10 +278,10 @@
          }
       },
       {
-         "name": "[variables('workflows_logic_video_indexer_trigger_name')]",
+         "name": "[parameters('workflows_logic_video_indexer_trigger_name')]",
          "type": "Microsoft.Logic/workflows",
          "apiVersion": "2017-07-01",
-         "location": "[variables('location')]",
+         "location": "[parameters('location')]",
          "dependsOn": [
          "[resourceId('Microsoft.Web/connections', variables('connections_cosmosdb_name'))]"
          ],
