--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,36 +1,28 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
+name: Weekly Traffic Report
 
 on:
-  schedule: 
-    # runs once a week on sunday
-    - cron: "55 23 * * *"
-    
+  schedule:
+    - cron: "0 0 * * 0" # Run every Sunday at midnight
+
 jobs:
-  # This workflow contains a single job called "traffic"
   traffic:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
       with:
-        ref: "main"
+        ref: ${{ github.event.repository.default_branch }}
     
-    # Calculates traffic and clones and stores in CSV file
-    - name: GitHub traffic 
+    - name: Calculate traffic and generate report
       uses: sangonzal/repository-traffic-action@v0.1.2
       env:
-        TRAFFIC_ACTION_TOKEN: ${{ secrets.TRAFFIC_ACTION_TOKEN }} 
+        TRAFFIC_ACTION_TOKEN: ${{ secrets.TRAFFIC_ACTION_TOKEN }}
      
-    # Commits files to repository
-    - name: Commit changes
+    - name: Commit traffic report
       uses: EndBug/add-and-commit@v4
       with:
-        author_name: Ranavikrant Chouhan
-        message: "GitHub traffic"
+        author_name: GitHub Actions
+        message: "Weekly traffic report"
         add: "./traffic/"
-        ref: "main"  # commits to branch "traffic"
+        ref: ${{ github.event.repository.default_branch }}
