--- a/.github/workflows/github-clone-stats.yml
+++ b/.github/workflows/github-clone-stats.yml
@@ -1,35 +1,38 @@
+# This is a basic workflow to help you get started with Actions
+
 name: github-clone-stats
 
 on:
   schedule:
     # Run this once per day, towards the end of the day for keeping the most
-    # recent data point most meaningful (hours are interpreted in UTC).
     - cron: "0 23 * * *"
   workflow_dispatch: # Allow for running this manually.
 
 jobs:
   j1:
-    name: github-clone-stats
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-        - uses: actions/checkout@v2
-          with:
-            ref: "main"
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+      with:
+        ref: "main"
+      
+    # Calculates traffic and clones and stores in CSV file
+    - name: GitHub traffic 
+      uses: sangonzal/repository-traffic-action@v0.1.2
+      env:
+        ghrs_github_api_token: ${{ secrets.ghrs_github_api_token }} 
     
-        # Calculates traffic and clones and stores in CSV file
-        - name: GitHub traffic 
-          uses: sangonzal/repository-traffic-action@v0.1.2
-          env:
-            ghtoken: ${{ secrets.ghrs_github_api_token }} 
-    
-        # Commits files to repository
-        - name: Commit changes
-          uses: EndBug/add-and-commit@v4
-          with:
-            author_name: Adnan Sharique
-            message: "GitHub traffic"
-            add: "./traffic/"
-            ref: "main"  # commits to branch "traffic"
+    # Commits files to repository
+    - name: Commit changes
+      uses: EndBug/add-and-commit@v4
+      with:
+        author_name: Adnan Sharique
+        message: "GitHub traffic"
+        add: "./traffic/"
+        ref: "main"  # commits to branch "traffic"
 
 
         
