--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,46 +8,71 @@
     "@fluentui/react": "^8.108.0",
     "@fluentui/react-icons": "^2.0.200",
     "@microsoft/applicationinsights-web": "^2.8.10",
-    "@progress/kendo-drawing": "^1.21.2",
+    "@progress/kendo-data-query": "^1.6.0",
+    "@progress/kendo-date-math": "^1.5.13",
+    "@progress/kendo-drawing": "^1.17.2",
     "@progress/kendo-inputs-common": "^3.1.1",
     "@progress/kendo-intl": "^3.1.2",
-    "@progress/kendo-licensing": "^1.6.0",
-    "@progress/kendo-pdfviewer-common": "^0.5.0",
+    "@progress/kendo-licensing": "^1.4.0",
     "@progress/kendo-popup-common": "^1.9.2",
-    "@progress/kendo-react-animation": "^11.2.0",
-    "@progress/kendo-react-buttons": "^11.2.0",
-    "@progress/kendo-react-common": "^11.2.0",
+    "@progress/kendo-react-animation": "^8.0.0",
+    "@progress/kendo-react-buttons": "^8.0.0",
+    "@progress/kendo-react-charts": "^8.0.0",
+    "@progress/kendo-react-common": "^8.0.0",
     "@progress/kendo-react-conversational-ui": "^8.0.0",
-    "@progress/kendo-react-data-tools": "^11.2.0",
-    "@progress/kendo-react-dialogs": "^11.2.0",
-    "@progress/kendo-react-dropdowns": "^11.2.0",
-    "@progress/kendo-react-form": "^11.2.0",
-    "@progress/kendo-react-inputs": "^11.2.0",
-    "@progress/kendo-react-intl": "^11.2.0",
-    "@progress/kendo-react-labels": "^11.2.0",
-    "@progress/kendo-react-layout": "^11.2.0",
-    "@progress/kendo-react-pdf-viewer": "^11.2.0",
+    "@progress/kendo-react-data-tools": "^8.0.0",
+    "@progress/kendo-react-dateinputs": "^8.0.0",
+    "@progress/kendo-react-dialogs": "^8.0.0",
+    "@progress/kendo-react-dropdowns": "^8.0.0",
+    "@progress/kendo-react-editor": "^8.0.0",
+    "@progress/kendo-react-excel-export": "^8.0.0",
+    "@progress/kendo-react-form": "^8.0.0",
+    "@progress/kendo-react-gantt": "^8.0.0",
+    "@progress/kendo-react-gauges": "^8.0.0",
+    "@progress/kendo-react-grid": "^8.0.0",
+    "@progress/kendo-react-indicators": "^8.0.0",
+    "@progress/kendo-react-inputs": "^8.0.0",
+    "@progress/kendo-react-intl": "^8.0.0",
+    "@progress/kendo-react-labels": "^8.0.0",
+    "@progress/kendo-react-layout": "^8.0.0",
+    "@progress/kendo-react-listbox": "^8.0.0",
+    "@progress/kendo-react-listview": "^8.0.0",
+    "@progress/kendo-react-notification": "^8.0.0",
+    "@progress/kendo-react-pdf": "^8.0.0",
+    "@progress/kendo-react-pdf-viewer": "^5.12.1",
+    "@progress/kendo-react-pivotgrid": "^8.0.0",
     "@progress/kendo-react-popup": "^8.0.0",
-    "@progress/kendo-react-progressbars": "^11.2.0",
+    "@progress/kendo-react-progressbars": "^8.0.0",
+    "@progress/kendo-react-ripple": "^8.0.0",
+    "@progress/kendo-react-scheduler": "^8.0.0",
+    "@progress/kendo-react-scrollview": "^5.12.1",
+    "@progress/kendo-react-sortable": "^8.0.0",
     "@progress/kendo-react-tooltip": "^8.0.0",
-    "@progress/kendo-react-treeview": "^11.2.0",
-    "@progress/kendo-react-upload": "^11.2.0",
+    "@progress/kendo-react-treelist": "^8.0.0",
+    "@progress/kendo-react-treeview": "^8.0.0",
+    "@progress/kendo-react-upload": "^8.0.0",
     "@progress/kendo-svg-icons": "^3.0.0",
     "@progress/kendo-theme-fluent": "^8.1.0",
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@xyflow/react": "^12.3.1",
     "axios": "^1.2.3",
+    "azure-maps-control": "^2.2.3",
     "dompurify": "^3.0.2",
     "fp-tools": "^3.0.0",
     "lodash.startcase": "^4.4.0",
-    "microsoft-cognitiveservices-speech-sdk": "^1.38.0",
+    "lodash.throttle": "^4.1.1",
+    "lottie-react": "^2.4.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.28.0",
     "powerbi-client": "^2.19.1",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
+    "react-azure-maps": "^0.4.4",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-images-uploading": "^3.1.7",
@@ -55,8 +80,11 @@
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "react-webcam": "^7.2.0",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.4",
+    "typewriter-effect": "^2.19.0",
     "universal-cookie": "^4.0.4",
     "util": "^0.12.5",
     "uuid": "^9.0.0",
@@ -87,8 +115,11 @@
     ]
   },
   "devDependencies": {
+    "@types/bingmaps": "^0.0.1",
     "@types/dompurify": "^3.0.2",
+    "@types/jest": "^27.5.2",
     "@types/lodash.startcase": "^4.4.7",
+    "@types/lodash.throttle": "^4.1.7",
     "@types/node": "^16.18.9",
     "@types/ramda": "^0.28.20",
     "@types/react": "^18.0.26",
